added UpdateComment method
