# docs/swagger.yaml
@@ -287,6 +287,52 @@ paths:
       summary: Add a comment
       tags:
       - Blog
+    put:
+      consumes:
+      - application/json
+      description: Update a comment
+      parameters:
+      - description: Bearer <token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Blog ID
+        in: query
+        name: blog_id
+        required: true
+        type: string
+      - description: Comment ID
+        in: query
+        name: comment_id
+        required: true
+        type: string
+      - description: Comment
+        in: body
+        name: comment
+        required: true
+        schema:
+          $ref: '#/definitions/types.Comment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: comment updated successfully
+          schema:
+            $ref: '#/definitions/types.BlogResp'
+        "400":
+          description: invalid data request
+          schema:
+            type: string
+        "500":
+          description: error updating comment
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Update a comment
+      tags:
+      - Blog
   /blog/comments:
     get:
       consumes:
