# pkg/routes/blog.go
@@ -44,6 +44,6 @@ func (b *blogRoutes) initBlogRoutes(e *echo.Echo) {
 	blog.POST("/comment", b.blogController.AddComment, middlewares.Auth)
 	blog.GET("/comment", b.blogController.GetComments, middlewares.Auth)
 	blog.DELETE("/comment", b.blogController.DeleteComment, middlewares.Auth)
-	//blog.PUT("/comment/:userID/:postID/:commentID", b.blogController.UpdateComment, middlewares.Auth)
+	blog.PUT("/comment", b.blogController.UpdateComment, middlewares.Auth)
 
 }
